# EpsilonTemplate

./: .gitignore  Cargo.toml  Dockerfile
data/: Dockerfile
data/parents/spigot-1.8.8/: parents.epsilon
data/templates/hub/: details.epsilon
docker/: Dockerfile
src/: api_error.rs  api_success.rs  config.rs  global.rs  main.rs  manager.rs
src/maps/: manager.rs  mod.rs  routes.rs
src/parents/: manager.rs  mod.rs  parent.rs  routes.rs
src/responses/: api_error.rs  api_success.rs  file_upload.rs  mod.rs
src/templates/: manager.rs  mod.rs  resource.rs  resources.rs  routes.rs  template.rs  utils.rs
src/utils/: file_upload.rs
