[package]
name = "epsilon_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
zip = "0.5"
tar = "0.4.38"
glob = "0.3.0"
bollard = "0.11.1"
futures-util = "0.3.21"