[package]
name = "epsilon_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = "1.0.192"
zip = "0.6.6"
tar = "0.4.40"
glob = "0.3.1"
bollard = "0.15.0"
futures-util = "0.3.29"